// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpottedPlaneCard snapshots renders successfully 1`] = `
<div>
  <div>
    <div
      class="MuiCardMedia-root css-80io7p-MuiCardMedia-root"
      role="img"
      style="background-image: url(https://file.notion.so/);"
      title="Qatar Airways A350-900 A7-ALB"
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      >
        Qatar Airways A350-900 A7-ALB
        <a
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
          href="https://www.planespotters.net/"
          rel="noreferrer"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="OpenInNewIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </h2>
      <div>
        id: 
        id-truthy
        , description: 
        description 1
        , hashtags: 
        #hashtags1
      </div>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-118alpw-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Discard
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
     
    not selectable
    ,
    not selected
    ,
    not isAnySelected
    ,
    toggleSelect passed
    .
  </div>
</div>
`;

exports[`SpottedPlaneCard snapshots when does not show description renders successfully 1`] = `
<div>
  <div>
    <div
      class="MuiCardMedia-root css-80io7p-MuiCardMedia-root"
      title=""
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      />
      <div>
        MockedNewFirstFlightForm: id: 
        id-empty
        , 
        enabled
      </div>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-118alpw-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Create description
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
     
    not selectable
    ,
    not selected
    ,
    not isAnySelected
    ,
    toggleSelect passed
    .
  </div>
</div>
`;

exports[`SpottedPlaneCard snapshots when loading renders successfully 1`] = `
<div>
  <div>
    <div
      class="MuiCardMedia-root css-80io7p-MuiCardMedia-root"
      role="img"
      style="background-image: url(https://file.notion.so/);"
      title="Qatar Airways A350-900 A7-ALB"
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      >
        Qatar Airways A350-900 A7-ALB
        <a
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
          href="https://www.planespotters.net/"
          rel="noreferrer"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="OpenInNewIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </h2>
      <div>
        id: 
        id-truthy
        , description: 
        description 1
        , hashtags: 
        #hashtags1
      </div>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-118alpw-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Discard
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall Mui-disabled MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-owonun-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
        disabled=""
        id=":r0:"
        tabindex="-1"
        type="button"
      >
        <div
          class="MuiLoadingButton-loadingIndicator MuiLoadingButton-loadingIndicatorCenter css-1yt7yx7-MuiLoadingButton-loadingIndicator"
        >
          <span
            aria-labelledby=":r0:"
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorInherit css-62e83j-MuiCircularProgress-root"
            role="progressbar"
            style="width: 16px; height: 16px;"
          >
            <svg
              class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
        </div>
        Apply
      </button>
    </div>
     
    selectable
    ,
    not selected
    ,
    not isAnySelected
    ,
    toggleSelect passed
    .
  </div>
</div>
`;

exports[`SpottedPlaneCard snapshots when photo is selectable renders successfully 1`] = `
<div>
  <div>
    <div
      class="MuiCardMedia-root css-1sirhbt-MuiCardMedia-root"
      role="img"
      style="background-image: url(https://file.notion.so/);"
      title="Qatar Airways A350-900 A7-ALB"
    />
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-18k87ye-MuiTypography-root"
      >
        Qatar Airways A350-900 A7-ALB
        <a
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
          href="https://www.planespotters.net/"
          rel="noreferrer"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="OpenInNewIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </h2>
      <div>
        id: 
        id-truthy
        , description: 
        description 1
        , hashtags: 
        #hashtags1
      </div>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-118alpw-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Discard
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiLoadingButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-owonun-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
        id=":r1:"
        tabindex="0"
        type="button"
      >
        Apply
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
     
    selectable
    ,
    not selected
    ,
    isAnySelected
    ,
    toggleSelect passed
    .
  </div>
</div>
`;
